# acgs-lite

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .gitmodules  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  DEMO_RECORDING.md  DEVPOST_SUBMISSION.md  Dockerfile  HACKATHON.md  HACKATHON_CONCEPT.md  LICENSE  Makefile  PLANS.md  README.md  SYSTEMIC_IMPROVEMENT.md  TODOS.md  acgs-reels-strategy.md  architecture.mmd  cloudbuild.yaml  conftest.py  demo-multiagent.sh  docker-compose.yml  ecosystem.config.cjs  mcp-config.json  mkdocs.yml  multiagent-orchestration.cast  pyproject.toml  render.yaml  results.tsv  security_best_practices_report.md  start_agent_bus.py  start_api_gateway.py  workspace.dsl  (+1 more)
.claude/: settings.json
.codex/: README.md  config.toml
.context/: codex-session-id
.gemini/: run-gemini.sh  settings.json  settings.local.json.example
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
.learnings/: LEARNINGS.md  README.md
.omc/: project-memory.json
.omx/: metrics.json
.playwright-cli/: page-2026-03-19T21-16-58-366Z.yml  page-2026-03-19T21-17-07-697Z.yml  page-2026-03-19T21-17-21-595Z.yml  page-2026-03-19T21-19-45-790Z.yml  page-2026-03-19T21-20-09-550Z.yml  page-2026-03-19T21-20-27-802Z.yml  page-2026-03-19T21-20-36-101Z.yml  page-2026-03-19T21-20-43-017Z.yml  page-2026-03-19T21-21-01-819Z.yml  page-2026-03-19T21-21-15-922Z.yml  page-2026-03-19T21-22-02-767Z.yml  page-2026-03-19T21-23-04-500Z.yml  page-2026-03-19T21-24-04-325Z.yml  page-2026-03-19T21-24-48-989Z.yml  page-2026-03-19T21-25-00-270Z.yml  page-2026-03-19T21-26-02-185Z.yml  page-2026-03-19T21-26-22-391Z.yml  page-2026-03-19T21-26-26-989Z.yml  page-2026-03-19T21-26-38-300Z.yml  page-2026-03-19T21-27-00-370Z.yml  page-2026-03-19T21-27-20-143Z.yml  page-2026-03-19T21-30-27-986Z.yml  page-2026-03-19T21-30-44-034Z.yml  page-2026-03-19T21-30-56-881Z.yml  page-2026-03-19T21-31-05-095Z.yml  page-2026-03-19T21-31-47-243Z.yml  page-2026-03-19T21-32-12-679Z.yml  page-2026-03-19T21-32-32-666Z.yml  page-2026-03-19T21-32-48-263Z.yml  page-2026-03-19T21-33-16-184Z.yml  page-2026-03-19T21-33-37-950Z.yml  page-2026-03-25T15-06-00-668Z.yml  page-2026-03-25T15-07-07-583Z.yml  page-2026-03-25T15-08-38-414Z.yml  page-2026-03-25T15-10-01-696Z.yml  page-2026-03-25T15-10-36-497Z.yml  page-2026-03-25T15-11-03-588Z.yml  page-2026-03-25T15-11-27-715Z.yml  page-2026-03-25T15-11-34-599Z.yml  page-2026-03-25T15-11-35-104Z.yml  (+40 more)
autonoma/: .generation-id  AUTONOMA.md  features.json  scenarios.md
autoresearch/: AGENTS.md  README.md  bench_stable.py  benchmark.py  constitution.yaml  eval_rules.py  evaluate_raw_dataset_cases.py  feature_grid.py  generate_scenarios.py  governance_quality_benchmark.py  log_run.py  program.md  raw_dataset_adapter.py  results.tsv  results_utils.py  run_raw_dataset_manifest.py  setup_run.py  test_autoresearch.py
claudedocs/: INDEX.md  acgs-lite-api.md  core-services-api.md  design_enhanced_agent_bus_decomposition_20260318.md  design_governance_pipeline_viz_20260319.md  developer-guide.md  enhanced-agent-bus-architecture.md  research_acgs_codebase_deep_dive_20260318.md  research_gitlab_duo_building_20260319.md
deploy/: fly.toml  pre_warm.sh
design/: README.md  acgs-openshell-integration.md
diagrams/: structurizr-AgentBusComponents.puml  structurizr-Containers.puml  structurizr-GatewayComponents.puml  structurizr-GovernanceFlow.puml  structurizr-ProductionDeployment.puml  structurizr-SystemContext.puml
docs/: AGENT_SKILL_AUDIT.md  EU_AI_ACT_GUIDE.md  GITLAB.md  ORIGIN.md  README.md  RUNTIME_OPTIMIZATION_REPORT.md  ai-workspace.md  architecture.md  changelog.md  cli.md  compliance-2026.md  context-compaction.md  contributing-frameworks.md  contributing-integrations.md  contributing.md  external-distribution-submissions.md  final-launch-copy.md  hero-demo-capture-plan.md  index.md  integration-dashboard.html  integrations.md  launch-copy-drafts.md  maci.md  mcp-guide.md  mcp.md  next-milestones.md  oss-growth-playbook.md  owasp-2026.md  project-memory.md  quickstart.md  repo-guidance-layering.md  repo-map.md  security.md  self-evolution.md  stability.md  subagent-execution.md  supervisor-models.md  telegram-webhook.md  testing-governance.md  testing-spec.md  (+4 more)
examples/: 01-single-agent-approval.md  02-mcp-shared-governance.md  README.md  constitution.yaml  demo_cli_sidecars.sh  eu_ai_act_quickstart.py  gitlab-ci-governance.yml  gitlab_anthropic_demo.py  gitlab_mr_governance.py  gitlab_webhook_server.py  hackathon_starter_chatbot.py  hackathon_starter_content_mod.py  hackathon_starter_maci.py  lifecycle_quickstart.py  mcp_agent_client.py  quickstart.py  quickstart_content_mod.py  quickstart_healthcare.py  quickstart_hiring.py
gitlab-duo/: .gitlab-ci.yml  AGENTS.md  README.md  agent-config.yml  chat-rules.md
hackathon/: .gitlab-ci.yml  README.md  cloud-run-deploy.sh  devpost-submission.md  duo-agent-prompt.md
hackathon-demo/: DEVPOST-SUBMISSION.md  README.md  app.py  constitution.yaml
memory/: 2026-03-30.md  README.md
plans/: README.md  openai-cookbook-integration-plan.md
propriety-ai-legacy/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo
research/: .gitignore  README.md  RESEARCH.md  constitution_secrets.json  dag-as-coordinator-deep-dive.md  mac-multi-agent-constitution-learning-note.md  microsoft-agent-governance-toolkit-vs-acgs.md  run_all_experiments.py  x1_constitutional_humaneval.py  x1_results.json  x2_results.json  x2_swe_secrets.py  x3_maci_decisions.py  (+7 more)
rust/: Cargo.toml  README.md
rust/core/: Cargo.toml
rust/core/src/: context.rs  hash.rs  lib.rs  result.rs  severity.rs  validator.rs  verbs.rs
rust/pyo3/: Cargo.toml  README.md  pyproject.toml
rust/pyo3/src/: lib.rs
rust/spacetime_governance/: Cargo.toml
rust/spacetime_governance/src/: lib.rs
rust/src/: severity.rs  validator.rs
rust/src.legacy/: context.rs  result.rs  severity.rs  verbs.rs
rust/wasm/: Cargo.toml
rust/wasm/src/: lib.rs
(+1377 files in other folders)
