# Constitutional Hash: 608508a9bd224290
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acgs-lite"
version = "2.10.0"
description = "Runtime governance for AI agents — deterministic enforcement before execution, MACI role separation, tamper-evident audit trails, and operator intervention workflows."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    {name = "ACGS Team", email = "hello@acgs.dev"},
]
keywords = ["ai", "governance", "constitutional", "agents", "safety", "guardrails", "maci", "audit", "eu-ai-act", "ai-governance", "compliance", "constitutional-ai", "llm-safety", "agentic-firewall", "formal-verification", "z3", "lean4", "hipaa", "gdpr", "nist-ai-rmf", "ai-act", "responsible-ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Natural Language :: English",
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.optional-dependencies]
a2a = ["a2a-sdk>=0.2", "httpx>=0.27"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
agno = ["agno>=2.5"]
langchain = ["langchain-core>=0.2"]
litellm = ["litellm>=1.0"]
google = ["google-genai>=1.0"]
llamaindex = ["llama-index-core>=0.10"]
autogen = ["autogen-core>=0.4", "autogen-agentchat>=0.4"]
mcp = ["mcp>=1.0", "structlog>=21.0"]
crewai = ["crewai>=0.30"]
autonoma = ["pyjwt>=2.0", "structlog>=21.0", "fastapi>=0.100"]
server = ["fastapi>=0.100", "uvicorn>=0.24"]
gitlab = ["httpx>=0.27", "starlette>=0.37"]
google-cloud = ["google-cloud-logging>=3.0"]
mistral = ["mistralai>=2.0"]
pdf = ["fpdf2>=2.7"]
otel = ["opentelemetry-api>=1.0,<2.0", "opentelemetry-sdk>=1.0,<2.0"]
postgres = ["psycopg[binary]>=3.1", "psycopg-pool>=3.2"]
all = ["acgs-lite[a2a,openai,anthropic,agno,langchain,litellm,google,llamaindex,autogen,mcp,crewai,autonoma,gitlab,google-cloud,pdf,mistral,otel]"]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "mike>=2.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-benchmark>=4.0",
    "pytest-cov>=4.1",
    "ruff>=0.8",
    "mypy>=1.13",
    "tomli>=2.0; python_version < '3.11'",
    "acgs-lite[docs]",
]

[project.scripts]
"acgs" = "acgs_lite.cli:main"
"acgs-lite" = "acgs_lite.cli:main"

[project.urls]
Homepage = "https://acgs.ai"
Documentation = "https://acgs.ai/docs"
Repository = "https://github.com/dislovelhl/acgs-lite"
Issues = "https://github.com/dislovelhl/acgs-lite/issues"
Changelog = "https://github.com/dislovelhl/acgs-lite/releases"
PyPI = "https://pypi.org/project/acgs-lite/"

[tool.setuptools.packages.find]
where = ["src"]
include = ["acgs*", "acgs_lite*"]

[tool.setuptools.package-data]
acgs_lite = ["provider_capabilities_manifest.json"]
"acgs_lite.arckit" = ["templates/*.md"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["examples", "tests", ".omc"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",
    "E402",
    "SIM102",
]

[tool.ruff.lint.per-file-ignores]
# Autoresearch-optimized hot path: semicolons, import order, and line length are deliberate
"src/acgs_lite/engine.py" = ["E702", "E402", "E501", "SIM102"]
"src/acgs_lite/constitution.py" = ["SIM102"]
"src/acgs_lite/__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-m 'not e2e'"
markers = [
    "unit: Fast tests with no I/O and no external services",
    "integration: Tests requiring mocked external services",
    "compliance: Regulatory framework tests",
    "constitutional: Governance engine validation tests",
    "benchmark: Performance tests",
    "red_team: Adversarial bypass and exhaustion scenarios",
    "e2e: End-to-end governance scenarios requiring stable fixture baselines",
]
filterwarnings = [
    "ignore:.*_UnionGenericAlias.*deprecated.*:DeprecationWarning:google\\.genai\\.types",
    "ignore:.*Core Pydantic V1 functionality isn't compatible with Python 3\\.14.*:UserWarning:langchain_core\\._api\\.deprecation",
]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/acgs_lite"]
exclude = "(?x)(^tests/|^examples/|^src/split_engine\\.py$)"
ignore_missing_imports = true
warn_unused_ignores = false
allow_untyped_decorators = true
disable_error_code = ["import-untyped", "import-not-found", "no-untyped-call", "misc", "type-arg", "no-any-return"]

[[tool.mypy.overrides]]
module = [
    "acgs_lite.constitution.constitution",
    "acgs_lite.constitution.memoization",
    "acgs_lite.constitution.policy_export",
    "acgs_lite.constitution.regulatory",
    "acgs_lite.constitution.rule",
    "acgs_lite.engine.batch",
    "acgs_lite.engine.core",
    "acgs_lite.integrations.a2a",
    "acgs_lite.integrations.anthropic",
]
ignore_errors = true
