[package]
name = "acgs-validator-core"
version = "0.1.0"
edition = "2021"
description = "Pure Rust governance validation engine — no FFI dependencies"

[lib]
name = "acgs_validator_core"

[dependencies]
aho-corasick = "1.1"
regex = "1.11"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
