[package]
name = "acgs-validator-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM build of the ACGS governance validator for Cloudflare Workers"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
acgs-validator-core = { path = "../core" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
regex = "1.11"

[dev-dependencies]
wasm-bindgen-test = "0.3"
